<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jimmy_pc.ingdemo.DetailsActivity">


    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/imgView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.25"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/name" />

                    <TextView
                        android:id="@+id/nameLabelTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/email" />

                    <TextView
                        android:id="@+id/emailLabelTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/balance" />

                    <TextView
                        android:id="@+id/balanceLabelTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/remarkTV"
            android:text="@string/remark"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoLayout"/>

        <EditText
            android:editable="false"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            android:id="@+id/dummyET"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/darker_gray"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:layout_below="@id/remarkTV"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textColor="@android:color/white"
            android:text="@string/dummyTextRemark"/>

        <Button
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/footer_btn"
            android:textColor="@android:color/white"
            android:id="@+id/footerBtn"
            android:layout_below="@+id/dummyET"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</ScrollView>